# brine_valorization

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml  requirements-dev.txt
src/brine_valorization/analysis/data_generation/: bpmed_sweep.py  tds_recovery_sweeps.yaml
src/brine_valorization/analysis/reaktoro_sweep/data_generation/: sweep_evaporation.py
src/brine_valorization/costing/: bipolar_electrodialysis_costing.py  valorization_costing_block.py
src/brine_valorization/flowsheets/: bpmed.py
src/brine_valorization/property_models/: mcas_with_enthalpy.py
src/brine_valorization/sweeps/: test_voltage_param_sweep.py  test_voltage_sweep.py
src/brine_valorization/unit_models/: Biploar_and_Electrodialysis_1D_nmsu.py  bipolar_membrane_electrodialsysis_1d.py  bpmed.py
src/brine_valorization/unit_models/tests/: Biploar_and_Electrodialysis_1D_nmsu.py  test_bpmed.py
